syntax = "proto3";

package api.v1.application;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "v1/common/page.proto";

option go_package = "api-server/api/v1/application;application";

service ApplicationService {
  rpc CreateApplication (Application) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/application"
      body: "*"
    };
  }
}

message Application {
  uint64 id = 1[
    (google.api.field_behavior) = IMMUTABLE
  ];
  uint64 cluster_id = 2 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).uint64 = {gt: 0}
  ];
  string name = 3 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {max_len: 64}
  ];
  string description = 4 [
    (google.api.field_behavior) = OPTIONAL,
    (validate.rules).string = {max_len: 512}
  ];
}